--- a/workplus/src/main/resources/application.properties
+++ b/workplus/src/main/resources/application.properties
@@ -3,3 +3,13 @@ spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/workplus?serverTim
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=dustkafh61!
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.type.descriptor.sql=TRACE
