--- a/workplus/src/main/resources/application.properties
+++ b/workplus/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
