로그인 기능 구현중 - LoginService에서 UserDetails 설정 부분부터 해야 함.

--- a/workplus/build.gradle
+++ b/workplus/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'mysql:mysql-connector-java'
+	compile 'org.webjars:bootstrap:5.0.1' // 부트스트랩  
+    compile("org.springframework.boot:spring-boot-starter-security") // Spring Security
 }
 
 test {
