--- a/workplus/build.gradle
+++ b/workplus/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	compile 'org.webjars:bootstrap:5.0.1' // 부트스트랩  
     compile("org.springframework.boot:spring-boot-starter-security") // Spring Security
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5' // Spring Security
 }
 
 test {
