마이페이지 구현중 - 파일등록시 확장자 추가하게끔 수정 중. - 이후 프로필 수정 탭부터 시작해야 함.

--- a/workplus/src/main/resources/application.properties
+++ b/workplus/src/main/resources/application.properties
@@ -25,5 +25,6 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 
 # file path
-resource.path=file:///d:/resource/
+#resource.path=file:///d:/resource/
+resource.path=file:///c:/workplus/files/
 upload.path=/upload/**
