--- a/workplus/src/main/resources/application.properties
+++ b/workplus/src/main/resources/application.properties
@@ -25,6 +25,6 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
 
 # file path
-resource.path=file:///d:/resource/
-#resource.path=file:///c:/workplus/files/
+#resource.path=file:///d:/resource/
+resource.path=file:///c:/workplus/files/
 upload.path=/upload/**
